--- a/css/base.css
+++ b/css/base.css
@@ -5923,6 +5923,8 @@ pre code {
 }
 
 .dropdown-toggle-btn {
+  margin-right: 1px;
+  margin-left: 1px;
   padding-right: 16px;
   padding-left: 16px;
   position: relative;
@@ -5934,18 +5936,16 @@ pre code {
   color: #212121;
 }
 .dropdown-toggle-btn ~ .dropdown-menu {
-  min-width: 101%;
-  min-width: -webkit-calc(100% + 2px);
-  min-width: calc(100% + 2px);
+  min-width: 100%;
   padding-top: 56px !important;
   top: -14px;
-  left: -1px;
+  left: 0;
   -webkit-transform: scale(1, 0);
       -ms-transform: scale(1, 0);
           transform: scale(1, 0);
 }
 .dropdown-toggle-btn ~ .dropdown-menu.dropdown-menu-right, .dropdown.pull-right .dropdown-toggle-btn ~ .dropdown-menu, .nav.pull-right .dropdown-toggle-btn ~ .dropdown-menu {
-  right: -1px;
+  right: 0;
   left: auto;
 }
 
